# Terri-Fried

./: .gitignore  Dockerfile  Makefile  README.md
.github/workflows/: build.yaml
3ds/: 3ds.rsf  Makefile  clean.bat  compile cia.bat  compile.bat
3ds/include/: platform.h  player.h
3ds/romfs/gfx/: numbers.t3s  sprites.t3s
3ds/source/: main.cpp  platform.cpp  player.cpp
CSharp/: CSharp.sln
CSharp/Terri-Fried-Raylib/: Platform.cs  Player.cs  Program.cs  Terri-Fried-Raylib.csproj
SDL2_PC/: Makefile  main.cpp  platform.h  player.h
SDL2_PC/winres/: TF-icon.res
gamecube/: Makefile
gamecube/source/: main.cpp  platform.h
linux/: Makefile
linux+macOS/: main.cpp  platform.cpp
linux/raylib/: Makefile  Terri-Fried  main.cpp  platform.cpp  platform.h
linux/sdl2/: Makefile  platform.cpp
linux/sdl2/winres/: TF-icon.rc
macOS/Terri-Fried/: Makefile  main.cpp  player.cpp
macOS/Terri-Fried.xcodeproj/: project.pbxproj
nds/: Makefile  clean.bat  compile.bat
nds/nflib/include/: nf_2d.h  nf_3d.h  nf_affinebg.h  nf_basic.h  nf_bitmapbg.h  nf_colision.h  nf_defines.h  nf_lib.h  nf_media.h  (+7 more)
nds/source/: main.cpp  platform.cpp  player.cpp  player.h
ps vita/src/: main.cpp  platform.cpp  player.h
psvita/: CMakeLists.txt  Makefile
psvita/src/: player.cpp
raylib/: Makefile  main.cpp  player.cpp
switch/: Makefile
switch/source/: main.cpp  platform.cpp  platform.h  player.cpp  player.h
wii/: Makefile
wii/source/: main.cpp  oggplayer.c  oggplayer.h  platform.cpp  player.cpp
wiiu/: Makefile  Terri-Fried.rpx  meta.xml
wiiu/source/: main.cpp  platform.cpp  player.cpp
windows/raylib/: Makefile  player.cpp  player.h
windows/sdl2/: Makefile
windows_sdl2/: main.cpp
xbox/: Makefile
xbox/source/: game.cpp  game.h  main.cpp  score.cpp  score.h  splash.cpp  splash.h  title.cpp  title.h
(+61 files in other folders)
